--- a/p8451_assignment_1.Rmd
+++ b/p8451_assignment_1.Rmd
@@ -111,15 +111,30 @@ fit_logistic %>%
   mutate(OR = exp(estimate),
          CI_lower = exp(estimate - 1.96*std.error),
          CI_upper = exp(estimate + 1.95*std.error)) %>%
-  select(term, estimate, OR, CI_lower, CI_upper) %>%
-  knitr::kable()
+  select(term, estimate, OR, CI_lower, CI_upper, p.value) %>%
+  knitr::kable(digits = 3)
 ```
 
-The beta estimate associated with a 1-unit change in HOMA-IR is 0.274. The OR is 1.315. The 95% CI is (0.939, 1.84).
+The beta estimate associated with a 1-unit change in HOMA-IR is 0.274. The OR is 1.315. The 95% CI is (0.939, 1.849).
 
 ## Question 5 
 
+Constuct a linear regression model using insulin as the outcome and BMI (continuous), age, and glucose as the independent variables. Fill in the beta estimate and 95% confidence interval associated with a 1-unit change in age.
 
+```{r}
+fit_linear = 
+  lm(insulin ~ bmi + age + glucose, data = bcdata)
+
+fit_linear %>%
+  broom::tidy() %>%
+  mutate(OR = exp(estimate),
+         CI_lower = exp(estimate - 1.96*std.error),
+         CI_upper = exp(estimate + 1.96*std.error)) %>%
+  select(term, estimate, OR, CI_lower, CI_upper, p.value) %>%
+  knitr::kable(digits = 3)
+```
+
+The beta estimate associated with a 1-unit change in age is -0.054. The OR is 0.947. The 95% CI is (0.856, 1.049). 
 
 
 
